k8s-yaml/ingress-practices/crm-ingress/crm1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crm1-service
  namespace: default
spec:
  selector:
    app: crm1
  ports:
  - name: http
    port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crm1-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crm1
  template:
    metadata:
      labels:
        app: crm1
    spec:
      containers:
      - name: crm1-system
        image: nginx:1.15-alpine
        imagePullPolicy: IfNotPresent
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh","-c","echo crm1.sjhz.tk > /usr/share/nginx/html/index.html"]
        ports:
        - name: httpd
          containerPort: 80
