k8s-yaml/ingress-practices/crm-ingress/crm2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crm2-service
  namespace: default
spec:
  selector:
    app: crm2
  ports:
  - name: http
    port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crm2-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crm2
  template:
    metadata:
      labels:
        app: crm2
    spec:
      containers:
      - name: crm2-system
        image: nginx:1.15-alpine
        imagePullPolicy: IfNotPresent
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh","-c","echo crm2.sjhz.tk > /usr/share/nginx/html/index.html"]
        ports:
        - name: httpd
          containerPort: 80
