k8s-yaml/ingress-practices/crm-ingress/crm-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crm-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: "crm1.sjhz.tk"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: crm1-service
            port:
              number: 80
  - host: "crm2.sjhz.tk"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: crm2-service
            port:
              number: 80
